--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,10 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  background-color: #283faa;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
