--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,16 @@ body {
   display: grid;
   place-items: center;
 }
+
+button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  padding: 20px 45px;
+  background-color: transparent;
+  border: 5px solid #fff;
+  color: #fff;
+  letter-spacing: 1.5px;
+  border-radius: 50px;
+  cursor: pointer;
+  outline: none;
+}
